tests/ui/lifetimes/lifetime-elision-return-type-trait.stderr
error[E0277]: the trait bound `Result<(), _>: Future` is not satisfied
  --> $DIR/lifetime-elision-return-type-trait.rs:8:13
   |
LL | fn foo() -> impl Future<Item=(), Error=Box<dyn Error>> {
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `Future` is not implemented for `Result<(), _>`
LL |
LL |     Ok(())
   |     ------ return type was inferred to be `Result<(), _>` here
   |
help: this trait has no implementations, consider adding one
  --> $DIR/lifetime-elision-return-type-trait.rs:1:1
   |
LL | trait Future {
   | ^^^^^^^^^^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
